--- a/trailercrianças.html
+++ b/trailercrianças.html
@@ -52,7 +52,7 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
-          
+          <a href="cartaz.html">Faça mais sugestões de filmes</a>
       <p><a href="index.html" style="color:purple;" <button class="botao"></button>página inicial</a></p>
       
   </body>
