--- a/cartaz.html
+++ b/cartaz.html
@@ -14,6 +14,8 @@
            <input type="text" id="nome" name="nome" required>
 
            <label for="email"> E-mail</label>
+           <input type="text" id="email" name="email" required>
+
           </form>
         </div>
     </main>
