--- a/trailercrianças.html
+++ b/trailercrianças.html
@@ -52,9 +52,9 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
-          <a href="cartaz.html" style="color: rgb(84, 0, 105);">Faça mais sugestões de filmes</a>
+          <a href="cartaz.html" style="color: rgb(84, 0, 105);" button class="botao"></button> >Faça mais sugestões de filmes</a>
 
-      <p><a href="index.html" style="color:purple;" <button class="botao"></button>página inicial</a></p>
+      <p><a href="index.html" style="color:purple;" button class="botao"></button>página inicial</a></p>
       
   </body>
 </html>
