--- a/cartaz.html
+++ b/cartaz.html
@@ -9,13 +9,37 @@
     <main> 
         <div class="form-container">
           <h2>fale conosco</h2>
-          <form>
-           <label for="nome">nome:</label>
+          <form action="#" method="post">
+            <!--dados pessoais-->
+           <label for="nome">Nome:</label>
            <input type="text" id="nome" name="nome" required>
 
-           <label for="email"> E-mail</label>
+           <label for="email">E-mail:</label>
            <input type="text" id="email" name="email" required>
 
+            <label for="email">Telefone:</label>
+           <input type="tel" id="telefone:" name="telefone:" required>
+
+            <label for="email">idade:</label>
+           <input type="text" id="idade" name="idade" required>
+
+           <!--Tipo de filme-->
+            <label for="produto">Qual seria qual genêro?</label>
+           <select id="produto" name="produto" required>
+           <option value="|">selecione uma opção</option>
+           <option value="séries">séries</option>
+           <option value="filmes">filmes</option>
+            </select>
+
+           <!--descrição do filme-->
+           <label for="descrição">Qual seria o filme?</label>
+           <textarea id="descrição" name="descrição" rows="4" required></textarea> 
+
+           <!--Data-->
+           <label for="Data">Data do pedido:</label>
+           <input type="date" id="data" name="data" required>
+
+           <!---->
           </form>
         </div>
     </main>
